# wayland-vpets

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  Makefile.old  README.md  bongocat.conf  bongocat.conf.example
.github/workflows/: build.yml  release.yml
Dockerfiles/: debian  nix-test
assets/: COPYRIGHT.md  README.md
cmake/: CPM.cmake
docs/: begin.base.bongocat.conf.md  bongocat-all.conf.md  bongocat-all.md  bongocat-dm-classic.conf.md  bongocat-dm-classic.md  bongocat-dm.conf.md  bongocat-dm.md  bongocat-find-devices.md  bongocat-ms-agent.conf.md  bongocat-ms-agent.md  bongocat-pkmn.conf.md  bongocat-pkmn.md  bongocat.conf.md  bongocat.md  configuration.md  end.base.bongocat.conf.md
docs/fragments/: common.md  copyright.md  evol-all.md  evol-pkmn.md  examples-basic.md  options-all.md  options-dm-classic.md  options-dm.md  options-ms-agent.md  options-pkmn.md  options.md  set-dm.md  set-dm20.md  set-dmall.md  set-dmc.md  set-dmx.md  set-min-dm.md  set-misc.md  set-more-ms-agent.md  set-ms-agent.md  set-pen.md  set-pen20.md  set-pkmn.md  set-pmd.md  usage-custom.md
examples/: EXAMPLES.md  animated-digimon.bongocat.conf  background-digimon.bongocat.conf  background.bongocat.conf  clippy.bongocat.conf  digimon.bongocat.conf  dmc.bongocat.conf  evol-digimon.bongocat.conf  idle-only-digimon.bongocat.conf  minimal.bongocat.conf  pokemon.bongocat.conf  test.bongocat.conf  test2.bongocat.conf
examples/custom-sprite-sheets/: README.md  neko.bongocat.conf  skink.bongocat.conf
examples/test/: test.bongocat.conf
include/config/: config.h  config_watcher.h
include/core/: bongocat.h
include/embedded_assets/: assets.h  embedded_image.h
include/graphics/: animation.h  animation_context.h  animation_event_context.h  animation_shared_memory.h  animation_thread_context.h  bar.h  context.h  drawing.h  embedded_assets.h  embedded_assets_bongocat.h  embedded_assets_clippy.h  embedded_assets_digimon.h  embedded_assets_dms.h  embedded_assets_image.h  embedded_assets_ms_agents.h  embedded_assets_pkmn.h  embedded_image.h  global_animation_context.h  global_animation_session.h  sprite_sheet.h
include/image_loader/: load_images.h  load_svgs.h  stb_image.hpp
include/platform/: global_wayland_context.h  global_wayland_session.h  input.h  input_context.h  input_shared_memory.h  update.h  update_context.h  update_shared_memory.h  wayland-protocols.hpp  wayland.h  wayland_callbacks.h  wayland_context.h  wayland_setups.h  wayland_shared_memory.h  (+1 more)
lib/: nanosvgrast.h
nix/: NIXOS.md  README.md  default.nix  nixos-module.nix  shell.nix
protocols/: CMakeLists.txt  wlr-layer-shell-unstable-v1.xml  xdg-output-unstable-v1-client-protocol.h  xdg-output-unstable-v1.xml
scripts/: Dockerfile.test-nixos  all_crop_spritesheets.sh  all_generate_embedded_assets.sh  all_generate_embedded_assets_2.sh  all_generate_init_anim_inl.sh  all_generate_init_dm_anim_inl.sh  auto_even_spritesheet.sh  check_readonly_sections.sh  crop_spritesheet.sh  docker-test-nix-build.sh  find_input_devices.sh  generate_custom_init_anim.sh  generate_custom_init_anim_inl.sh  generate_custom_init_anim_inl_2.sh  generate_dm_list.sh  generate_embedded_assets.sh  generate_embedded_assets_2.sh  generate_embedded_assets_dm_evol.sh  generate_embedded_assets_dmall_evol.sh  generate_embedded_assets_pkmn_evol.sh  generate_embedded_assets_pmd_evol.sh  generate_embedded_custom_assets.sh  generate_embedded_custom_assets_2.sh  generate_init_anim.sh  generate_init_anim_inl.sh  generate_init_anim_inl_2.sh  generate_init_digimon_anim_inl.sh  generate_init_dm_anim_inl.sh  generate_list.sh  make-pmd-sprites.sh  test-nix-build.sh  test_bongocat.sh  test_bongocat_10.sh  test_bongocat_11.sh  test_bongocat_12.sh  test_bongocat_13.sh  test_bongocat_14.sh  test_bongocat_15.sh  test_bongocat_16.sh  test_bongocat_2.sh  (+12 more)
src/: CMakeLists.txt
src/embedded_assets/dmall/: CMakeLists.txt  dmall_config_parse_animation_name.cpp  dmall_get_evolution_data.cpp  dmall_get_sprite_sheet.cpp  dmall_images.c
src/embedded_assets/dmall/include/: dmall_config_parse_animation_name.h  dmall_config_parse_enum_key.cpp.inl  dmall_init_dm_anim.cpp.inl
src/embedded_assets/dmx/: CMakeLists.txt  dmx_config_parse_animation_name.cpp  dmx_get_evolution_data.cpp  dmx_get_sprite_sheet.cpp  dmx_images.c
src/embedded_assets/dmx/include/: dmx_config_parse_animation_name.h  dmx_config_parse_enum_key.cpp.inl  dmx_init_dm_anim.cpp.inl
src/embedded_assets/ms_agent/: CMakeLists.txt  embedded_assets_ms_agent.cpp  ms_agent_images.c
src/image_loader/: CMakeLists.txt  load_images.cpp  load_images_hybrid.cpp  load_images_pngle.cpp  load_images_stb_image.cpp  load_svgs.cpp  stb_image.cpp
src/image_loader/base_dm/: CMakeLists.txt  load_dm.cpp
src/image_loader/bongocat/: CMakeLists.txt  load_images_bongocat.cpp
src/image_loader/custom/: CMakeLists.txt  load_custom.cpp
src/image_loader/dm/: CMakeLists.txt  dm_load_sprite_sheet.cpp  load_images_dm.cpp
src/image_loader/dm20/: CMakeLists.txt  dm20_load_sprite_sheet.cpp  load_images_dm20.cpp
src/image_loader/dmall/: CMakeLists.txt  dmall_load_sprite_sheet.cpp  load_images_dmall.cpp
src/image_loader/dmc/: CMakeLists.txt  dmc_load_sprite_sheet.cpp  load_images_dmc.cpp
src/image_loader/dmx/: CMakeLists.txt  dmx_load_sprite_sheet.cpp  load_images_dmx.cpp
src/image_loader/min_dm/: CMakeLists.txt  load_images_min_dm.cpp  min_dm_load_sprite_sheet.cpp
src/image_loader/misc/: CMakeLists.txt  load_images_misc.cpp  misc_load_sprite_sheet.cpp
src/image_loader/ms_agent/: CMakeLists.txt  load_images_ms_agent.cpp
src/image_loader/pen/: CMakeLists.txt  load_images_pen.cpp  pen_load_sprite_sheet.cpp
src/image_loader/pen20/: CMakeLists.txt  load_images_pen20.cpp  pen20_load_sprite_sheet.cpp
src/image_loader/pkmn/: CMakeLists.txt  load_images_pkmn.cpp  pkmn_load_sprite_sheet.cpp
src/image_loader/pmd/: CMakeLists.txt  load_images_pmd.cpp  pmd_load_sprite_sheet.cpp
tests/: CMakeLists.txt  test_config.cpp  test_memory.cpp  test_utils.cpp
(+255 files in other folders)
